Fix animation overflow bug

--- a/music/style.css
+++ b/music/style.css
@@ -20,9 +20,9 @@ ul{
     font-size: 30px;
     color: white;
     position: fixed;
-    top: 5%;
-    right: 5%;
-    z-index: 1000;
+    top: 15px;
+    right: 15px;
+    z-index: 100;
     transition-duration: 0.5s;
 }
 
@@ -34,16 +34,19 @@ ul{
 
 .hidden {
     display: none !important;
-  }
+    overflow-x: hidden;
+}
   
 .visuallyhidden {
     opacity: 0;
+    overflow-x: hidden;
 }
 
 .navigation{
     width: 100vw;
     max-width: 100%;
     height: 100vh;
+    margin: 0;
     background-color: rgba(0, 0, 0, 0.8);
     display: flex;
     position: fixed;
@@ -143,4 +146,13 @@ ul{
     color: white;
     font-size: 16px;
     transition-duration: 1.5s;
+}
+
+@media (max-width:600){
+    .third-page .singer-intro{
+        max-width: 150px;
+        color: white;
+        font-size: 16px;
+        transition-duration: 1.5s;
+    }
 }
